# STREAM

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CITATION.cff  COSTS.md  Dockerfile.frontend  Dockerfile.middleware  Dockerfile.proxy  GLOBUS_COMPUTE_INTEGRATION.md  How_to_query_the_databse.md  LICENSE  README.md  STREAM (backup-2026_01_22).excalidraw  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  stream.spec  stream_production_architecture.excalidraw
.github/: dependabot.yml
.github/workflows/: security.yml
assets/: icon.icns
docs/: ADDING_NEW_MODELS.md  ARCHITECTURE.md  CLOUD_ROUTING_VIA_AGGREGATORS.md  COST_CALCULATION.md  DESKTOP_BUILD_GUIDE.md  DESKTOP_PACKAGING_PLAN.md  DOCUMENT_UPLOAD.md  DRIVER_UPGRADE_PROPOSAL.md  GLOBUS_COMPUTE_INTEGRATION.md  LAKESHORE_CONNECTIVITY.md  MULTIMODAL_SUPPORT.md  PEARC_PAPER_OUTLINE.md  PRESENTATION_SLIDES.md  PRODUCTION_DEPLOYMENT.md  REACT_MIGRATION_PLAN.md  ROLLING_SUMMARIZATION.md  SETUP_GUIDE.md  VLLM_HPC_DEPLOYMENT_TECHNICAL_REPORT.md  WEBSOCKET_RELAY_IMPLEMENTATION.md  WEBSOCKET_RELAY_TECHNICAL_REPORT.md  WEB_SEARCH.md  pearc26-stream-paper.tex  pearc26-stream-poster.tex  relay-security.md
frontend/: README.md  streamlit_app.py
frontends/react/: auth_server.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontends/react/src/: App.tsx  main.tsx
frontends/react/src/api/: auth.ts  config.ts  costs.ts  documents.ts  health.ts  models.ts  stream.ts  summarize.ts
frontends/react/src/components/: ErrorBoundary.tsx
frontends/react/src/stores/: chatStore.ts  conversationStore.ts  healthStore.ts  settingsStore.ts
frontends/streamlit/: config.py  streamlit_app.py
scripts/: build-vllm-cu124.sh  build_desktop.py  globus-endpoint-config.yaml  setup-stream.sh  setup_lakeshore.py  sync-env.sh  vllm-coder-1.5b.sh  vllm-coder-14b.sh  vllm-coder-32b.sh  vllm-cu124.def  vllm-deepseek-r1-1.5b.sh  vllm-deepseek-r1-14b.sh  vllm-deepseek-r1-32b.sh  vllm-ga001.sh  vllm-qwen-1.5b.sh  vllm-qwen-14b.sh  vllm-qwen-32b-fp16.sh  vllm-qwen-32b.sh  vllm-qwen-72b.sh  vllm-qwen-vl-72b.sh  vllm-qwq-1.5b.sh  vllm-qwq-32b.sh
scripts/eval/: EVALUATION_GUIDE.md  audit_dataset.py  balanced_test.jsonl  balanced_test_dataset.json  benchmark_compression.py  benchmark_latency.py  benchmark_llama_judge.py  benchmark_routing.py  build_balanced_dataset.py  build_mixed_dataset.py  build_realworld_testset.py  compare_imbalance_conditions.py  compare_judges.py  compare_throughput.py  compute_validation_kappa.py  consistency_check_balanced.py  consistency_report.json  consistency_report_balanced.json  consistency_report_v2.json  eval_on_realworld.py  evaluate_classifiers_gpt4o.py  fill_paper_todos.py  fix_budget_simulation.py  fix_format_bias.py  generate_benchmark_dataset.py  generate_benchmark_dataset_v2.py  generate_tables.py  hf_dataset_card.md  hf_model_card.md  lakeshore_balanced_train.slurm  lakeshore_setup.sh  plot_figures.py  run_imbalance_study.sh  sample_for_validation.py  test_queries.json  test_queries_expanded.json  topup_high_queries.py  train_balanced_classifier.py  train_cost_sensitive.py  train_modernbert.py  (+6 more)
scripts/eval/results/: balanced_classifier_report.json  budget_simulation.json  compression_2026-03-12_181253.json  compression_2026-03-12_184521.json  compression_2026-03-12_185106.json  compression_with_2026-03-13_160047.json  compression_with_2026-03-13_160740.json  compression_with_2026-03-28_130206.json  compression_without_2026-03-13_161214.json  compression_without_2026-03-28_125129.json  judge_comparison_realworld_testset.json  latency_2026-03-12_162736.json  latency_2026-03-12_163735.json  latency_2026-03-12_165128.json  latency_2026-03-12_170143.json  latency_2026-03-13_164907.json  latency_2026-03-16_124534.json  latency_2026-03-23_150905.json  latency_2026-03-24_125033.json  latency_2026-03-24_125210.json  latency_2026-03-24_125634.json  latency_2026-03-28_131708.json  latency_2026-03-28_132518.json  latency_2026-05-20_155751.json  latency_2026-05-20_155935.json  latency_2026-05-20_155938.json  latency_2026-05-20_164415.json  latency_2026-05-20_174841.json  latency_2026-05-20_181838.json  latency_2026-05-20_185837.json  latency_2026-05-21_064313.json  latency_2026-05-21_091112.json  latency_2026-05-21_094740.json  latency_2026-05-21_113324.json  latency_2026-05-21_130805.json  llama_judge_report.json  routing_2026-03-12_155451.json  routing_2026-03-12_155735.json  routing_2026-03-24_151507.json  routing_2026-05-07_195024.json  (+6 more)
stream/backend/: config.py
stream/desktop/: __init__.py  config.py  first_run.py  main.py  ollama_lifecycle.py  static_files.py
stream/gateway/: README.md  docker-compose.yml  litellm_config.yaml
stream/middleware/: README.md  app.py  config.py
stream/middleware/core/: complexity_judge.py  database.py  database_sqlite.py  globus_auth.py  globus_compute_client.py  health_monitor.py  lifecycle.py  litellm_client.py  litellm_direct.py  metrics.py  ollama_manager.py  query_router.py  streaming.py  tier_health.py  warm_ping.py
stream/middleware/routes/: auth.py  chat.py  config.py  costs.py  documents.py  health.py  models.py
stream/middleware/utils/: context_limit.py  context_window.py  cost_calculator.py  cost_reader.py  document_extractor.py  fallback.py  logging_config.py  multimodal.py  summarization.py  token_estimator.py  validation.py  visuals.py  web_search.py
stream/proxy/: __init__.py  app.py  auth.py
stream/relay/: crypto.py  server.py
stream/sdk/python/: chat_handler.py  config.py
tests/: install_websockets_on_endpoint.py  latency_benchmark.py  results_realistic.json  results_test.json  test_camera_cross_platform.py  test_compute_node_connectivity.py  test_document_extractor.py  test_e2e_globus_streaming.py  test_globus_compute_connection.py  test_multimodal.py  test_multimodal_modes.py  test_multimodal_routing.py  test_openrouter.py  test_reasoning.py  test_relay_integration.py  test_relay_local.py  test_summarization.py  test_vllm_via_globus_compute.py  test_web_search.py
(+22 files in other folders)
