[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream"
version = "1.0.0"
description = "STREAM - Smart Tiered Routing Engine for AI Models"
requires-python = ">=3.12"
authors = [
    {name = "Anas Nassar", email = "nassar@uic.edu"}
]

dependencies = [
    # Core Python utilities
    "python-dotenv>=1.0.0",
    # AI & LLM
    "litellm>=1.80.11",
    "openai>=2.14.0",
    # UI (Streamlit)
    "streamlit>=1.52.2",
    # Middleware - Web Framework
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    # Middleware - HTTP & Networking
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    # Database
    "psycopg2-binary>=2.9.10",
    # Utilities
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "globus-compute-sdk>=4.5.0",
    # Web Search (internet connectivity for LLM queries)
    "duckduckgo-search>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tavily-python>=0.5.0",
    # Document Upload (text/image extraction from uploaded files)
    "PyMuPDF>=1.24.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
# Desktop mode: needed to run STREAM as a standalone desktop app (no Docker).
# Install with: uv pip install -e ".[desktop]"
#
# pywebview opens a native OS window (like a real app) instead of a browser tab.
# It uses the OS's built-in web engine (WebKit on macOS, Edge on Windows).
# Without it, the app falls back to opening in your default browser.
#
# pyinstaller bundles the entire Python app + dependencies into a standalone
# .app (macOS), .exe (Windows), or binary (Linux) that runs without Python installed.
desktop = [
    "pywebview>=5.0",
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    # Benchmarking tools
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
]

# Tell hatchling where the package is
[tool.hatch.build.targets.wheel]
packages = ["stream"]

# Entry points — commands available after installation.
# After "uv pip install -e .", you can run these from anywhere in your terminal:
#   stream-middleware  → starts the FastAPI server (server/Docker mode)
#   stream-desktop     → launches the desktop app with a native window
[project.scripts]
stream-middleware = "stream.middleware.app:main"
stream-desktop = "stream.desktop.main:main"

[project.urls]
# Homepage = ""
Repository = "https://github.com/uicacer/STREAM"


[tool.ruff]
# Same as Black's line length
line-length = 100

# Target Python 3.12 (matches your requires-python and Lakeshore HPC endpoint)
target-version = "py312"

# Exclude directories and files that aren't regular Python code.
# .spec files are PyInstaller build configs — they use built-in names
# (Analysis, PYZ, EXE, etc.) that PyInstaller injects at runtime.
# Ruff doesn't know about these, so we skip .spec files entirely.
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "*.spec",
    "dist",
    "build",
    ".pytest_cache",
    ".ipynb_checkpoints",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore these specific rules
ignore = [
    "E501",  # line too long (formatter handles this)
    "B008",  # function calls in argument defaults (common in FastAPI)
    "N802",  # function name should be lowercase (allows mixed case)
]

# Per-file rule exceptions.
#
# Ruff linter rules each have a code (like E402, F401). Sometimes a rule
# is correct in general but wrong for specific files. We put these exceptions
# here in pyproject.toml because it's the central config file for all Python
# tools (Ruff, pytest, etc.) — one file instead of many scattered config files.
#
# These exceptions say: "Don't enforce this rule in this particular file."
[tool.ruff.lint.per-file-ignores]
# F401 = "imported but unused". In __init__.py files, unused imports are
# intentional — they re-export symbols so other modules can import from
# the package (e.g., "from stream.desktop import X").
"__init__.py" = ["F401"]
# E402 = "import not at top of file". Python convention says all imports
# go at the very top. But these files MUST run code before importing:
#   app.py  → starts a loading spinner before slow imports begin
#   main.py → sets STREAM_MODE=desktop before config.py reads os.environ
"stream/middleware/app.py" = ["E402"]
"stream/desktop/main.py" = ["E402"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces (4 spaces)
indent-style = "space"

# Use Unix line endings
line-ending = "lf"
